# RefereeSystem

./: .gitignore  README.md  samples2.txt  裁判系统.md
src/my_msg_interface/: CMakeLists.txt
src/my_msg_interface/msg/: AerialCmd.msg  SentryCmd.msg  VisionCmd.msg
src/referee_system/: CMakeLists.txt  package.xml  samples.txt  samples2.txt
src/referee_system/include/referee_system/: CRCcheck.h  DataType.h  MappingTables.cpp  MappingTables.h  enums.h
src/referee_system/launch/: param.yaml  replay.launch.py  run_referee_system.launch.py  runtest.launch.py
src/referee_system/src/: DataType.cpp  MappingTables.cpp  referee_system.cpp  replay.cpp  test.cpp
src/referee_system_plugin_base/: CMakeLists.txt  package.xml
src/referee_system_plugin_base/include/referee_system_plugin_base/: referee_system_base.hpp
src/referee_system_plugin_base/src/: test_node.cpp
src/referee_system_test_client/: CMakeLists.txt  package.xml
src/referee_system_test_client/include/referee_system_test_client/: DataType.h
src/referee_system_test_client/src/: DataType.cpp  test_client.cpp
